added touch controls div to html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <div class="progress-bar-fill" id="progress-bar-fill"></div>
         </div>
     </div>
+    <div id="touch-controls"></div>
     <canvas class="canvas"></canvas>
 
     <!-- Mobile Controls -->
